force-app/main/default/objects/Inventory_Adjustment__c/Inventory_Adjustment__c.object-meta.xml
<CustomObject>
    <label>Inventory Adjustment</label>
    <nameField>
        <displayFormat>Invadj - {0000}</displayFormat>
        <label>Inventory Adjustment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Adjustment</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>