force-app/main/default/objects/Inventory_Adjustment__c/fields/Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Name__c</fullName>
    <formula>Inventory__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Name</label>
    <type>Text</type>
</CustomField>