force-app/main/default/objects/Inventory_Adjustment__c/fields/Primary_Invoice_transaction__c.field-meta.xml
<CustomField>
    <fullName>Primary_Invoice_transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Invoice transaction</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Inventory Adjustment (Primary Invoice transaction)</relationshipLabel>
    <relationshipName>Inventory_Adjustment1</relationshipName>
    <type>Lookup</type>
</CustomField>