force-app/main/default/objects/Inventory_Adjustment__c/fields/Primary_Related_transaction__c.field-meta.xml
<CustomField>
    <fullName>Primary_Related_transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Related transaction</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Inventory Adjustment</relationshipLabel>
    <relationshipName>Inventory_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>