force-app/main/default/objects/Inventory_Adjustment__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory Adjustment</relationshipLabel>
    <relationshipName>Inventory_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>