force-app/main/default/objects/Inventory_Adjustment__c/fields/Secondary_invoice__c.field-meta.xml
<CustomField>
    <fullName>Secondary_invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Counter order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Inventory Adjustment (Secondary related transaction)</relationshipLabel>
    <relationshipName>Inventory_Adjustment1</relationshipName>
    <type>Lookup</type>
</CustomField>