force-app/main/default/objects/Inventory_Adjustment__c/fields/Secondary_Invoice_transaction__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Invoice transaction</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Inventory Adjustment</relationshipLabel>
    <relationshipName>Inventory_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>