force-app/main/default/objects/Inventory_Adjustment__c/fields/Secondary_Return__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Return</label>
    <referenceTo>Returns__c</referenceTo>
    <relationshipLabel>Inventory Adjustment</relationshipLabel>
    <relationshipName>Inventory_Adjustment</relationshipName>
    <type>Lookup</type>
</CustomField>