force-app/main/default/objects/Inventory_Adjustment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Inventory__c</columns>
    <columns>Product__c</columns>
    <columns>Primary_Related_transaction__c</columns>
    <columns>Secondary_invoice__c</columns>
    <columns>Quantity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>